--- a/src/CSS/navbar.scss
+++ b/src/CSS/navbar.scss
@@ -82,7 +82,7 @@ body{
     .navbar >ul{
         grid-template-columns: 1fr;
         margin-right: -2rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
         background-color: white;
         width: 35vw;
         padding: 1em;
